按条件加载自定义跨域过滤器